--- a/css/style.css
+++ b/css/style.css
@@ -105,3 +105,8 @@ body {
   border-top: 25px solid #d5d5d5;
   border-radius: 25px;
 }
+
+.lesson {
+  font-size: 30px;
+  background-color: #fff;
+}
